test/errors/packages_error/zs/bottom_structure.zs
package bottom_structure;

struct BottomStructure
{
    uint16  value;
};
